log
Sat, Apr 19, 2025  1:25:45 AM: 
 hashmap.c | 50 +++++++++++++++++++++++++++++++++++++++++++++++---
 1 file changed, 47 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:46:40: error: passing argument 2 of 'is_equal' makes pointer from integer without a cast [-Werror=int-conversion]
         if(is_equal(map->buckets[pos], pos))
                                        ^~~
hashmap.c:35:5: note: expected 'void *' but argument is of type 'long int'
 int is_equal(void* key1, void* key2){
     ^~~~~~~~
hashmap.c: In function 'eraseMap':
hashmap.c:89:40: error: passing argument 2 of 'is_equal' makes pointer from integer without a cast [-Werror=int-conversion]
         if(is_equal(map->buckets[pos], pos))
                                        ^~~
hashmap.c:35:5: note: expected 'void *' but argument is of type 'long int'
 int is_equal(void* key1, void* key2){
     ^~~~~~~~
hashmap.c:97:12: error: 'return' with a value, in function returning void [-Werror]
     return NULL;
            ^~~~
hashmap.c:85:6: note: declared here
 void eraseMap(HashMap * map,  char * key) {
      ^~~~~~~~
hashmap.c: In function 'searchMap':
hashmap.c:104:40: error: passing argument 2 of 'is_equal' makes pointer from integer without a cast [-Werror=int-conversion]
         if(is_equal(map->buckets[pos], pos))
                                        ^~~
hashmap.c:35:5: note: expected 'void *' but argument is of type 'long int'
 int is_equal(void* key1, void* key2){
     ^~~~~~~~
cc1.exe: all warnings being treated as errors
eeef3b7
Sat, Apr 19, 2025  1:32:15 AM: 
 hashmap.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  11|2
total_score: 50/70
e7312e7
Sat, Apr 19, 2025  1:41:25 AM: 
 hashmap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  11|2
total_score: 50/70
a23e9b0
